# research-mcp-client

./: .env.example  .gitignore  LICENSE  README.md  mcp_chatbot.py  pyproject.toml  server_config.example.json
papers/ai/: papers_info.json
papers/ai_reasoning_capabilities_large_language_models/: papers_info.json
